--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+display: none;
+}
+
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
